Bug 278340 - unix(4): regressed after base aba79b0f4a3f
Summary: unix(4): regressed after base aba79b0f4a3f
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 15.0-CURRENT
Hardware: Any Any
: --- Affects Some People
Assignee: Gleb Smirnoff
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-04-13 04:39 UTC by (intentionally left blank)
Modified: 2024-04-14 17:22 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description (intentionally left blank) 2024-04-13 04:39:35 UTC
$ truss swaymsg -t get_outputs
[...]
socket(PF_LOCAL,SOCK_STREAM,0)			= 3 (0x3)
connect(3,{ AF_UNIX "/var/run/xdg/foo/sway-ipc.1001.27613.sock" },106) = 0 (0x0)
setsockopt(3,SOL_SOCKET,SO_RCVTIMEO,0x820bb96a8,16) = 0 (0x0)
write(3,"i3-ipc\0\0\0\0\^C\0\0\0",14)		= 14 (0xe)
write(3,0x825f64008,0)				ERR#14 'Bad address'
00:00:00.000 write(2,"00:00:00.000 ",13)			= 13 (0xd)
ioctl(2,TIOCGETA,0x820bb9504)			= 0 (0x0)
write(2,"\^[[1;31m",7)				= 7 (0x7)
[common/ipc-client.c:140] Unable to send IPC payload
write(2,"[common/ipc-client.c:140] Unable"...,52) = 52 (0x34)
ioctl(2,TIOCGETA,0x820bb9504)			= 0 (0x0)
write(2,"\^[[0m",4)				= 4 (0x4)
write(2,"\n",1)					= 1 (0x1)
exit(0x1)					
process exit, rval = 1
Comment 1 commit-hook freebsd_committer freebsd_triage 2024-04-14 17:21:52 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=e6a4b57239dafc6c944473326891d46d966c0264

commit e6a4b57239dafc6c944473326891d46d966c0264
Author:     Gleb Smirnoff <glebius@FreeBSD.org>
AuthorDate: 2024-04-14 17:21:07 +0000
Commit:     Gleb Smirnoff <glebius@FreeBSD.org>
CommitDate: 2024-04-14 17:21:07 +0000

    mbuf: restore m_uiotombuf() feature of returning a zero length mbuf

    PR:     278340
    Fixes:  aba79b0f4a3f69f070ace6effd5700d65226bd20

 sys/kern/uipc_mbuf.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)