mbuf: restore m_uiotombuf() feature of returning a zero length mbuf

PR:	278340
Fixes:	aba79b0f4a3f69f070ace6effd5700d65226bd20